--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -68,20 +68,11 @@ jobs:
         # Build for Windows (amd64)
         GOOS=windows GOARCH=amd64 go build -o movie-tinder-windows-amd64.exe .
 
-    - name: Upload Linux binary
+    - name: Upload binaries
       uses: actions/upload-artifact@v4
       with:
-        name: movie-tinder-linux-amd64
-        path: movie-tinder-linux-amd64
-
-    - name: Upload macOS binary
-      uses: actions/upload-artifact@v4
-      with:
-        name: movie-tinder-darwin-amd64
-        path: movie-tinder-darwin-amd64
-
-    - name: Upload Windows binary
-      uses: actions/upload-artifact@v4
-      with:
-        name: movie-tinder-windows-amd64
-        path: movie-tinder-windows-amd64.exe
+        name: movie-tinder-binaries
+        path: |
+          movie-tinder-linux-amd64
+          movie-tinder-darwin-amd64
+          movie-tinder-windows-amd64.exe
